Update CORS configuration and refine package.json build script
- Modified the CORS middleware in index.js to restrict access to a specific origin and enable credentials for enhanced security.
- Updated the build script in package.json to clarify that no build step is needed for plain JavaScript, improving developer guidance.

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "build": "npm install"
+    "build": "echo 'No build step needed for plain JS. If using Babel, add your build command here.'"
   },
   "keywords": [],
   "author": "",
