--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "build": "echo 'No build step needed for plain JS. If using Babel, add your build command here.'"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
