--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "framer-motion": "^12.19.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^6.17.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
